# iamai

./: .gitignore  README.md  env.example  jest.config.js  mint_and_send_tokens.js  netlify.toml  package-lock.json  package.json  send_tokens.js  transfer_tokens.js
backend/: Dockerfile  package.json
backend/src/: server.js
backend/src/config/: database.js  redis.js
backend/src/middleware/: auth.js  security.js
backend/src/routes/: analytics.js  auth.js  ipfs.js  user.js
backend/src/utils/: logger.js
backend/tests/: setup.js
backend/tests/routes/: auth.test.js  token.test.js
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
docs/: DEPLOYMENT.md
docs/contracts/: staking.md
docs/frontend/: components.md  hooks.md
iamai-dao/: .gitignore  Anchor.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile.frontend  deploy.sh  docker-compose.yml  env.example  iamai-dao-repo.bundle  netlify.toml  nginx.conf  package-lock.json  package.json
iamai-dao/backend/tests/: jest.config.js
iamai-dao/contracts/governance/: lib.rs
iamai-dao/contracts/marketplace/: lib.rs
iamai-dao/contracts/staking/: Cargo.toml  lib.rs
iamai-dao/docs/: API.md
iamai-dao/monitoring/: prometheus.yml  promtail.yml
solana-release/: version.yml
src/__tests__/: setup.ts
src/components/: Navigation.tsx
src/hooks/: useAuth.ts  useGovernanceData.ts  useMarketplaceData.ts  useStakingData.ts  useToken.ts
src/lib/: utils.ts
(+37 files in other folders)
